--- a/About.html
+++ b/About.html
@@ -1,13 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link rel="stylesheet" href="style.css">
-    <!link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-   </head>
-<body>
-  <p>Hi Everyone</p>
-</body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Contact Us</title>
+  <link rel="shortcut icon" type="image/png" href="contact.png">
+  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="/Website/cont.js"></script>
+</head>
+<body oncontextmenu="return false">
+  <div class="navbar">
+    <ul class="nav-links">
+      <li><a href="/Website/index.html">Home</a></li>
+      <li><a href="/Website/About.html">About</a></li>
+      <li class="upward"><a href="/Website/image.html">Images</a></li>
+      <li><a href="/Website/contact.html">Contact</a></li>
+    </ul>
+  </div>
+
+  <div class="container">
+    <div class="content">
+      <div class="left-side">
+        <div class="address details">
+          <i class="fas fa-map-marker-alt"></i>
+          <div class="topic">Address</div>
+          <a href="https://maps.app.goo.gl/KSgjNyiAgAmj9PsG9">
+          <div class="text-one">Shop No-7, Govinda Apt,</div>
+          <div class="text-two">Nr. St.Anne's Convent School,</div>
+          <div class="text-two">Vidya mandir marg,</div>
+          <div class="text-two">Vasai West</div>
+          </a>
+        </div>
+        <div class="phone details">
+          <i class="fas fa-phone-alt"></i>
+          <div class="topic">Phone</div>
+          <div class="text-one"><a href="tel:+919823220777">+91-9823-22-0777</a></div>
+          <div class="text-two"><a href="tel:+917709056648">+91-7709-05-6648</a></div>
+        </div>
+        <div class="email details">
+          <i class="fas fa-envelope"></i>
+          <div class="topic">Email</div>
+          <div class="text-one"><a href="mailto:stebinsabu40503@gmail.com">stebinsabu40503@gmail.com</a></div>
+        </div>
+      </div>
+      <div class="right-side">
+        <div class="topic-text">Send us a message</div>
+        <p>If you have any work from me or any types of queries, you can send me message from here. It's my pleasure to
+          help you.</p>
+        <form onsubmit="sendEmail(); reset(); return false;">
+          <div class="input-box">
+            <input type="text" id="name" placeholder="Enter your name" required>
+          </div>
+          <div class="input-box">
+            <input type="email" id="email" placeholder="Enter your email id" required>
+          </div>
+          <div class="input-box message-box">
+            <textarea id="message" placeholder="Enter your queries..." cols="30" rows="10"></textarea>
+          </div>
+          <button type="submit">Send Now</button>
+       </div>
+      </form>
+
+    </div>
+ </body>
 </html>
