--- a/index.html
+++ b/index.html
@@ -5,37 +5,12 @@
   <meta charset="UTF-8">
   <title>Contact Us</title>
   <link rel="shortcut icon" type="image/png" href="contact.png">
-  <link rel="stylesheet" href="contact.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
-  <script> function sendEmail() {
-  Email.send({
-    Host: "smtp.gmail.com",
-    Username: "stebinsteel@gmail.com",
-    Password: "stebinmathew",
-    To: 'stebinsteel@gmail.com',
-    From : document.getElementById("email").value,
-    Subject: "New Enquiry on Contact Form",
-    Body : "Name: " + document.getElementById("name").value
-          + "<br> Email: " + document.getElementById("email").value
-          + "<br> Message: " + document.getElementById("message").value
-  }).then(
-    message => {
-      if(message=='OK'){
-      alert('Your mail has been sent successfully. Thank You for Contacting Us. We will get back to you soon.');
-    }
-    else{
-      console.error (message);
-      alert('There is an error at sending message.Try checking your internet connectivity')
-    }
-    }
-  );
-}  </script>
-  
+  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
   <style>
-  /* Google Font CDN Link */
+/* Google Font CDN Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
@@ -46,92 +21,100 @@
 body{
   height: 10vh;
   display: absolute;
-  background: #7d2ae8;
+  background: #2f283b;
 }
-.navbar{
-  height: 69px;
-  width: 260px;
-  margin-top: 0.5%;
-  margin-bottom: 1.9%;
-  margin-left: 78%;
-  background: #fff;
-  border-radius: 20px;
+nav{
+  background: #000000;
+  padding: 0px 40px;
+}
+nav ul{
+  
+  list-style: none;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-.navbar ul{
+nav ul li{
+  padding: 15px 0;
+  cursor: pointer;
+}
+nav ul li.items{
   position: relative;
-  display: inline-flex;
+  width: auto;
+  margin: 0 16px;
+  text-align: center;
+  order: 3;
 }
-.navbar ul li{
-  position: relative;
-  list-style-type: none;
-}
-.navbar ul li a{
-  position: relative;
-  height: 120px;
-  width: 90px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-}
-.navbar ul li a i{
+nav li a:before{
+  content: '';
   position: absolute;
-  font-size: 38px;
-  color: #7d2ae8;
+  bottom: 0;
+  left: 0;
+  height: 3px;
+  width: 0%;
+  background: #44f84d;
+  border-radius: 12px;
+  transition: all 0.4s ease;
 }
-ul li a i.activeIcon{
+nav li a:hover:before{
+  width: 100%;
+}
+nav li.center a:before{
+  left: 50%;
+  transform: translateX(-50%);
+}
+nav li.upward a:before{
+  width: 100%;
+  bottom: -5px;
   opacity: 0;
-  pointer-events: none;
-  transition: all 0.6s ease;
-  transition-delay: 0.2s;
 }
-.navbar ul li.active a i{
+nav li.upward a:hover:before{
+  bottom: 0px;
   opacity: 1;
-  pointer-events: auto;
 }
-.navbar ul .indicator{
-  position: absolute;
-  bottom: 1px;
-  left: 34px;
-  height: 36px;
-  width: 25px;
-  background: #7d2ae8;
-  border-radius: 50%;
-  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+nav li.forward a:before{
+  width: 100%;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease;
 }
-ul .indicator::before{
-  content: "";
-  position: absolute;
-  left: -15px;
-  bottom: 50%;
-  height: 22px;
-  width: 20px;
-  background: #fff;
-  border-bottom-right-radius: 20px;
-  box-shadow: 0 10px 0 #7d2ae8;
+nav li.forward a:hover:before{
+  transform: scaleX(1);
+  transform-origin: left;
 }
-ul .indicator::after{
-  content: "";
-  position: absolute;
-  right: -15px;
-  bottom: 50%;
-  height: 22px;
-  width: 20px;
-  background: #fff;
-  border-bottom-left-radius: 20px;
-  box-shadow: 0 10px 0 #7d2ae8;
+nav ul li.logo{
+  flex: 1;
+  color: white;
+  font-size: 35px;
+  font-weight: 600;
+  cursor: default;
+  user-select: none;
+  margin-left: 35px;
+}
+nav ul li a{
+  color: white;
+  font-size: 18px;
+  text-decoration: none;
+  transition: .4s;
+}
+nav ul li:hover a{
+  color: #44f84d;
+}
+nav ul li i{
+  font-size: 23px;
+}
+nav ul li.btn{
+  display: none;
+}
+nav ul li.btn.hide i:before{
+  content: '\f00d';
 }
 .container{
-  width: 85%;
+  width: 88%;
+  margin-top: 10px;
+  margin-left: 65px;
   background: #fff;
-  align-items: center;
-  justify-content: center;
-  margin-left: 7.5%;
   border-radius: 6px;
   padding: 20px 60px 30px 40px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
@@ -167,7 +150,7 @@ ul .indicator::after{
 }
 .content .left-side .details i{
   font-size: 30px;
-  color: #220570;
+  color: #3e2093;
   margin-bottom: 10px;
 }
 .content .left-side .details .topic{
@@ -177,7 +160,7 @@ ul .indicator::after{
 .content .left-side .details .text-one,
 .content .left-side .details .text-two{
   font-size: 14px;
-  color: #5b5bf7;
+  color: #afafb6;
 }
 .container .content .right-side{
   width: 75%;
@@ -211,28 +194,23 @@ ul .indicator::after{
 .right-side .input-box textarea{
   padding-top: 6px;
 }
-
-button[type="Submit"]{
-  margin-bottom: 0px;
-  width: 100%;
-  border:none;
-  outline: 2px;;
-  padding: 20px;
-  font-size: 24px;
-  border-radius: 8px;
-  background-color: rgb(102, 211, 238);
-  font-family: 'Montserrat';
-  color: #06010a;
-  text-align: center;
+.right-side .button{
+  display: inline-block;
+  margin-top: 12px;
+}
+.right-side .button input[type="button"]{
+  color: #fff;
+  font-size: 18px;
+  outline: none;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 6px;
+  background: #3e2093;
   cursor: pointer;
-  margin-top: 10px;
-  transition: .3s ease background-color;
-  box-shadow: 0px 5px 15px 0px rgba(28, 0, 181, 0.5);
+  transition: all 0.3s ease;
 }
-button[type="submit"]:hover{
-  background-color: #7d2ae8;
-  color: #F0F1F8;
-}
+.button input[type="button"]:hover{
+  background: #5029bc;
 }
 
 @media (max-width: 950px) {
@@ -247,8 +225,8 @@ button[type="submit"]:hover{
 }
 @media (max-width: 820px) {
   .container{
-    margin: 40px 0;
-    height: 100%;
+    margin: 30px 18px;
+    height: 1060px;
   }
   .container .content{
     flex-direction: column-reverse;
@@ -267,19 +245,46 @@ button[type="submit"]:hover{
    width: 100%;
    margin-left: 0;
  }
+nav{
+  padding: 5px 10px;
+}
+nav ul li.logo{
+  font-size: 23px;
+  margin-left: 2px;
+}
+nav ul li.items{
+  width: 100%;
+  display: none;
+}
+nav ul li.items.show{
+  display: block;
+}
+nav ul li.btn{
+  display: block;
+}
+nav ul li.items:hover{
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px #33ffff,
+              inset 0 0 10px #66ffff;
+}
+nav ul li.items:hover:after{
+  opacity: 0;
 }
 }
-  </style>
+</style>
 </head>
-<body oncontextmenu="return false">
-  <div class="navbar">
-    <ul class="nav-links">
-      <li><a href="/Website/index.html">Home</a></li>
-      <li><a href="/Website/About.html">About</a></li>
-      <li class="upward"><a href="/Website/image.html">Images</a></li>
-      <li><a href="/Website/contact.html">Contact</a></li>
+<body>
+  <nav>
+    <ul>
+      <img class="logo-img" src="/Images/logo.jpeg" width="85" height="85" alt="Logo" Align="margin-top" >
+       <li class="logo">CONTACT US</li>
+       <li class="items"><a href="#">Home</a></li>
+       <li class="items"><a href="#">About</a></li>
+       <li class="items"><a href="/Images.html">Gallery</a></li>
+       <li class="items"><a href="/contact.css">Contact</a></li>
+       <li class="btn"><a href="#"><i class="fas fa-bars"></i></a></li>
     </ul>
-  </div>
+ </nav>
 
   <div class="container">
     <div class="content">
@@ -288,9 +293,10 @@ button[type="submit"]:hover{
           <i class="fas fa-map-marker-alt"></i>
           <div class="topic">Address</div>
           <a href="https://maps.app.goo.gl/KSgjNyiAgAmj9PsG9">
-          <div class="text-one">Shop No-7, Govinda Apt,</div>
-          <div class="text-two">Nr. St.Anne's Convent School,</div>
-          <div class="text-two">Vidya mandir marg,</div>
+          <div class="text-one">Shop No-7,</div>
+          <div class="text-one">Parshva Shraddha Bldg.</div>
+          <div class="text-two">Near Surya Garden,</div>
+          <div class="text-two">Krishna Township,</div>
           <div class="text-two">Vasai West</div>
           </a>
         </div>
@@ -309,8 +315,8 @@ button[type="submit"]:hover{
       <div class="right-side">
         <div class="topic-text">Send us a message</div>
         <p>If you have any work from me or any types of queries, you can send me message from here. It's my pleasure to
-          help you.</p>
-        <form onsubmit="sendEmail(); reset(); return false;">
+          help you.</p> 
+        <form method="post">
           <div class="input-box">
             <input type="text" id="name" placeholder="Enter your name" required>
           </div>
@@ -320,10 +326,43 @@ button[type="submit"]:hover{
           <div class="input-box message-box">
             <textarea id="message" placeholder="Enter your queries..." cols="30" rows="10"></textarea>
           </div>
-          <button type="submit">Send Now</button>
-       </div>
+          <div class="button">
+          <input type ="button" id="btn" value="Send Now">
       </form>
-
+      </div>
     </div>
- </body>
+  </body>
+ <script src="https://smtpjs.com/v3/smtp.js"></script>
+ <script>
+  var btn = document.getElementById('btn');
+  btn.addEventListener('click',function(e){
+    e.preventDefault()
+    var name = document.getElementById('name').value;
+    var email = document.getElementById('email').value;
+    var message = document.getElementById('message').value;
+
+  Email.send({
+    SecureToken: "ba3f4926-1993-47ff-a1a1-4df5a4afbf01",
+    From : 'stebinsteel@gmail.com',
+    To: 'stebinsteel@gmail.com',
+    ReplyFrom : document.getElementById("email").value,
+    /*Cc: 'albintharayil123@gmail.com',*/
+    Subject: "New Enquiry on Contact Form",
+    Body : "Name: " + document.getElementById("name").value
+          + "<br> Email: " + document.getElementById("email").value
+          + "<br> Message: " + document.getElementById("message").value
+  })
+  .then (
+    message => alert('Your mail has been sent successfully. Thank you for Contacting Us. We will get back to you soon!!!')
+  );
+})  
+ </script>
+<script>
+  $(document).ready(function(){
+    $('.btn').click(function(){
+      $('.items').toggleClass("show");
+      $('ul li').toggleClass("hide");
+    });
+  });
+</script> 
 </html>
