--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@ nav ul li.items:hover:after{
     <ul>
       <img class="logo-img" src="/Images/logo.jpeg" width="85" height="85" alt="Logo" Align="margin-top" >
        <li class="logo">CONTACT US</li>
-       <li class="items"><a href="#">Home</a></li>
+       <li class="items"><a href="https://stebinsabu.github.io/.com/">Home</a></li>
        <li class="items"><a href="#">About</a></li>
-       <li class="items"><a href="/Images.html">Gallery</a></li>
-       <li class="items"><a href="/contact.css">Contact</a></li>
+       <li class="items"><a href="https://stebinsabu.github.io/Gallery/">Gallery</a></li>
+       <li class="items"><a href="#">Contact</a></li>
        <li class="btn"><a href="#"><i class="fas fa-bars"></i></a></li>
     </ul>
  </nav>
