--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ nav ul li.items:hover:after{
 <body>
   <nav>
     <ul>
-      <img class="logo-img" src="/Images/logo.jpeg" width="85" height="85" alt="Logo" Align="margin-top" >
+      <img class="logo-img" src="logo.jpeg" width="85" height="85" alt="Logo" Align="margin-top" >
        <li class="logo">CONTACT US</li>
        <li class="items"><a href="https://stebinsabu.github.io/.com/">Home</a></li>
        <li class="items"><a href="#">About</a></li>
