--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Contact Us</title>
-  <link rel="shortcut icon" type="image/png" href="contact.png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-  <style>
 /* Google Font CDN Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
@@ -23,6 +11,7 @@ body{
   display: absolute;
   background: #2f283b;
 }
+
 nav{
   background: #000000;
   padding: 0px 40px;
@@ -194,25 +183,49 @@ nav ul li.btn.hide i:before{
 .right-side .input-box textarea{
   padding-top: 6px;
 }
-.right-side .button{
-  display: inline-block;
-  margin-top: 12px;
-}
-.right-side .button input[type="button"]{
-  color: #fff;
-  font-size: 18px;
-  outline: none;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 6px;
-  background: #3e2093;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-.button input[type="button"]:hover{
-  background: #5029bc;
-}
+button{
+  width: 140px;
+  height: 50px;
+  color: #ffffff;
+  background: #7002ff;
+  border-radius: 5px;
+  font-size: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  font-family: Verdana;
 
+}
+button i{
+  font-size: 25px;
+}
+.fa-check{
+  border: 1px solid #f3f4f5;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  font-size: 12px;
+  line-height: 17px;
+}
+.fa-check.checked{
+  color: #63e6be;
+background: #183153;
+}
+button .btn-text{
+  margin-left: 7px;
+}
+.fa-circle-notch{
+  animation: animate 1s ease infinite;
+}
+@keyframes animate{
+  0%{
+    transform: rotate(0turn);
+  }
+  100%{
+    transform: rotate(1turn);
+  }
+}
 @media (max-width: 950px) {
   .container{
     width: 90%;
@@ -326,13 +339,40 @@ nav ul li.items:hover:after{
           <div class="input-box message-box">
             <textarea id="message" placeholder="Enter your queries..." cols="30" rows="10"></textarea>
           </div>
-          <div class="button">
-          <input type ="button" id="btn" value="Send Now">
+            <button id="btn">
+              <i class="fas fa-check"></i>
+              <!--<i class="fas fa-circle-notch">-->
+              <h5><span class="btn-text">Send</span></h5>
+            </button>
       </form>
+      <div class="svg">
+      <iframe src="https://embed.lottiefiles.com/animation/118963" hidden></iframe></div>
       </div>
     </div>
   </body>
  <script src="https://smtpjs.com/v3/smtp.js"></script>
+ <script>
+  btn = document.querySelector("button"),
+  spinner = document.querySelector(".fa-circle-notch"),
+  icon = document.querySelector("i"),
+  btnText = document.querySelector(".btn-text");
+
+  btn.onclick = function(){
+    btn.style.cursor="wait";
+    btnText.textContent="";
+    btnText.style.margin=0;
+    icon.classList.replace("fa-check","fa-circle-notch");
+    
+    setTimeout(() => {
+      btn.style.pointerEvents="none";
+      btnText.textContent="Sent";
+      icon.classList.replace("fa-circle-notch","fa-check");
+      icon.classList.add("checked");
+      btnText.style = "margin-left: 7px";
+    },1000);//1000=1s
+  }
+ </script>
+
  <script>
   var btn = document.getElementById('btn');
   btn.addEventListener('click',function(e){
